Fixed certains items on wwr wireframe

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -9,7 +9,7 @@
 
 <body>
   <header>
-    <h1>Double Check Site Plan</h1>
+    <h1>Rafting Site Plan</h1>
     <h2>Elias Gutierrz-Privado</h2>
     <h2>WDD 130-A2</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
@@ -19,17 +19,14 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>This site will be used to double check the reliability of information by fact-checking it with other sources. Users can search
-        a specific statement or link a website's url where the website will read the entire information and return the user a bunch of 
-        urls that either confirms the reliability of it or shows how the source is false.
+    <p>This site will be used to build revenue through offering diverse ways to enjoy the outdoors. Whether it be camping or water rafting,
+      our purpose will be to offer an easy to access way uers can book trips to our resort.
     </p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>The people who'll use this website are those that want to make sure what they read or seen is true or not. It'll be a way to 
-        fact-check newslines or see if an old myth is still true to this day. People who use the news, students researching a topic,
-        or even curious users are the target domain for this site.They'll be able to use this sit from anywhere, to make it extremely
-        convenient for anyone who's just scrolling around and comes up to misinformation.
+    <p>The target audience are those who enjoy recreational outdoor activities. Whether it be water rafting, camping, or hiking, anyone who wants to make memorable
+      memories with friends, family, or by themselves can enjoy this wonderful resort.
     </p>
     <!-- change this -->
 
