--- a/wk04_challenge/challenge.html
+++ b/wk04_challenge/challenge.html
@@ -11,9 +11,9 @@
         <h1 class="title_hover">Education</h1>
 
         <p class="quote1">
-            Education is the difference between wishing you could help others & being able to help them
+            Education is the difference between wishing you could help others &<br> being able to help them
         </p>
-        <p class="quote1 end">---President Nelson</p>
+        <p class="quote1_end">---President Nelson</p>
 
         <p class="list">1. Faith in the Lord Jesus Christ</p>
         <p class="list">2. Repentance</p>
@@ -27,8 +27,8 @@
         </p>
     </main>
     <footer>
-        <p>Russell M. Nelson
-            President of the Church of Jesus Christ of Latter-day Saints</p>
+        <p>Russell M. Nelson<br>
+            President of the Church of Jesus Christ of Latter-<br>day Saints</p>
     </footer>
 </body>
 </html>
